tests/invalid/coerce_recursive_inst.err_exp
coerce_recursive_inst.m:042: In clause for
coerce_recursive_inst.m:042:   `bad1(in((coerce_recursive_inst.cons))) =
coerce_recursive_inst.m:042:   out((coerce_recursive_inst.cons))':
coerce_recursive_inst.m:042:   in coerce:
coerce_recursive_inst.m:042:   mode error: the input term has instantiatedness
coerce_recursive_inst.m:042:     named inst cons,
coerce_recursive_inst.m:042:     which expands to
coerce_recursive_inst.m:042:       bound(
coerce_recursive_inst.m:042:         cons(
coerce_recursive_inst.m:042:           ground,
coerce_recursive_inst.m:042:           named inst rec,
coerce_recursive_inst.m:042:           which expands to
coerce_recursive_inst.m:042:             bound(
coerce_recursive_inst.m:042:               cons(
coerce_recursive_inst.m:042:                 ground,
coerce_recursive_inst.m:042:                 named inst rec
coerce_recursive_inst.m:042:               )
coerce_recursive_inst.m:042:             ;
coerce_recursive_inst.m:042:               nil
coerce_recursive_inst.m:042:             )
coerce_recursive_inst.m:042:         )
coerce_recursive_inst.m:042:       ),
coerce_recursive_inst.m:042:   and cannot be converted to the type
coerce_recursive_inst.m:042:   `coerce_recursive_inst.rec(coerce_recursive_inst.citrus)'.
coerce_recursive_inst.m:048: In clause for
coerce_recursive_inst.m:048:   `bad2(in((coerce_recursive_inst.cons))) = out':
coerce_recursive_inst.m:048:   in coerce:
coerce_recursive_inst.m:048:   mode error: the input term has instantiatedness
coerce_recursive_inst.m:048:     named inst cons,
coerce_recursive_inst.m:048:     which expands to
coerce_recursive_inst.m:048:       bound(
coerce_recursive_inst.m:048:         cons(
coerce_recursive_inst.m:048:           ground,
coerce_recursive_inst.m:048:           named inst rec,
coerce_recursive_inst.m:048:           which expands to
coerce_recursive_inst.m:048:             bound(
coerce_recursive_inst.m:048:               cons(
coerce_recursive_inst.m:048:                 ground,
coerce_recursive_inst.m:048:                 named inst rec
coerce_recursive_inst.m:048:               )
coerce_recursive_inst.m:048:             ;
coerce_recursive_inst.m:048:               nil
coerce_recursive_inst.m:048:             )
coerce_recursive_inst.m:048:         )
coerce_recursive_inst.m:048:       ),
coerce_recursive_inst.m:048:   and cannot be converted to the type
coerce_recursive_inst.m:048:   `coerce_recursive_inst.rec(coerce_recursive_inst.citrus)'.
